# grvc_bt_ros

./: CMakeLists.txt  README.md  package.xml
bt_xml/: dummy_bt.xml  gates_bt.xml  gates_bt_.xml
include/: gnc_functions.hpp
launch/: dummy_bt.launch  gates_robot2024.launch
src/: gates_robot2024.cpp  main.cpp
